--- a/autenticacao/templates/login.html
+++ b/autenticacao/templates/login.html
@@ -1,3 +1,5 @@
+
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -5,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login</title>
   <link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/milligram.log.css" />
+  <link rel="stylesheet" href="{% static 'css/milligram.log.css' %}" />
 </head>
 <body>
   <div class="pagina">
   <div class="login-container">
     <div class="logo-login">
       <div class="coruja-circulo">
-        <img src="img/macotePI-removebg-preview.png" alt="Coruja mascote">
+        <img src="{%static 'img/macotePI-removebg-preview.png' %}" alt="Coruja mascote">
       </div>
     </div>
 
@@ -21,7 +23,7 @@
       <input type="password" placeholder="Senha" />
       <a href="#" class="esqueci">esqueci minha senha</a>
       <button class="btn-entrar">Entrar</button>
-      <button class="btn-registrar">Registrar</button>
+      <button class="btn-registrar"><a href="{% url 'cadastrar' %}">Registrar</a></button>
     </form>
   </div>
   </div>
