--- a/autenticacao/templates/cadastro.html
+++ b/autenticacao/templates/cadastro.html
@@ -5,8 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cadastro</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
   <link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="{% static 'css/milligram.cad.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/milligram.cad.css' %}"/>
 </head>
 <body>
   <div class="cadastro-container">
@@ -15,16 +17,25 @@
       <p class="foto-texto">Inserir foto</p>
     </div>
 
-    <form  method="POST" action="">
-    
-      <input type="text" placeholder="Nome de usuário" />
-      <input type="email" placeholder="Email" />
-      <input type="password" placeholder="Senha" />
-      <input type="password" placeholder="Confirmar senha" />
-      <button type="submit">Registrar</button>
+    <form  id="form" method="POST" action="">
+      {% csrf_token %}
+      <div class="message" style="text-align: center;">
+        {% if messages%}
+          {% for message in messages%} 
+          <div class="{{ message.tags}}" role="alert">{{message}}</div>
+          {% endfor %}
+        {% endif %}
+      </div>
+      <input  type="text" placeholder="Nome de usuário" name="username" />
+      <input type="email" placeholder="Email" name="email" />
+      <input class="senha" type="password" placeholder="Senha"name="senha"/>
+      <input type="password" placeholder="Confirmar senha" class="senhaAgain"/>
+      <button type="submit" >Registrar</button>
     </form>
           <p>colocar botao para voltar para o login</p>
 
   </div>
+
+   <script src="{% static 'js/cadastro.js' %}"></script>
 </body>
 </html>
