--- a/autenticacao/templates/login.html
+++ b/autenticacao/templates/login.html
@@ -6,8 +6,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/milligram.log.css' %}" />
+
 </head>
 <body>
   <div class="pagina">
@@ -19,6 +21,14 @@
     </div>
 
     <form>
+      {% csrf_token %}
+      <div class="message" style="text-align: center;">
+        {% if messages %}
+          {% for message in messages%} 
+          <div class="alert {{ message.tags}}" role="alert">{{message}}</div>
+          {% endfor %}
+        {% endif %}
+      </div>
       <input type="email" placeholder="Email" />
       <input type="password" placeholder="Senha" />
       <a href="#" class="esqueci">esqueci minha senha</a>
