Finalmente algumas atualizações

--- a/autenticacao/templates/login.html
+++ b/autenticacao/templates/login.html
@@ -32,8 +32,7 @@
       <input type="email" placeholder="Email" name="email" />
       <input type="password" placeholder="Senha" name="senha" />
       <a href="{% url 'forget_password' %}" class="esqueci">esqueci minha senha</a>
-      <button class="btn-entrar">Entrar</button>
-      <button class="btn-registrar"><a href="{% url 'cadastrar' %}">Registrar</a></button>
+      <button class="btn-entrar"><a href="{% url 'comunidades' %}">Entrar</a></button>
     </form>
   </div>
   </div>
