--- a/app/templates/comuGeral.html
+++ b/app/templates/comuGeral.html
@@ -12,7 +12,7 @@
   <div class="container">
     <header>
        <div class="header-left">
-        <a href="{% url 'pEdit' %}"><img src="{%static 'img/macotePI-removebg-preview.png' %}" alt="Avatar" class="avatar" /></a>
+        <a href="{% url 'perfil' %}"><img src="{%static 'img/macotePI-removebg-preview.png' %}" alt="Avatar" class="avatar" /></a>
         <i class="fas fa-bell notification"></i>
       </div>
       <div class="search-wrapper">
