--- a/autenticacao/templates/login.html
+++ b/autenticacao/templates/login.html
@@ -20,7 +20,7 @@
       </div>
     </div>
 
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
       {% csrf_token %}
       <div class="message" style="text-align: center;">
         {% if messages %}
@@ -32,7 +32,8 @@
       <input type="email" placeholder="Email" name="email" />
       <input type="password" placeholder="Senha" name="senha" />
       <a href="{% url 'forget_password' %}" class="esqueci">esqueci minha senha</a>
-      <button class="btn-entrar"><a href="{% url 'comunidades' %}">Entrar</a></button>
+      <button class="btn-entrar">Entrar</button>
+      <button class="btn-registrar"><a href="{% url 'cadastrar' %}">Registrar</a></button>
     </form>
   </div>
   </div>
