--- a/templates/static/css/milligram.cad.css
+++ b/templates/static/css/milligram.cad.css
@@ -22,10 +22,16 @@ body {
   margin-bottom: 2rem;
 }
 
-.circulo-foto {
+.circulo-foto, .circulo-foto img {
   width: 100px;
   height: 100px;
   border-radius: 50%;
+  border: 5px solid #9c6d00;
+  background-color: #fff2d0;
+
+}
+.circulo-foto {
+
   border: 5px solid #9c6d00;
   background-color: #fff2d0;
 }
@@ -74,3 +80,9 @@ form button {
   background-color: #72DBF3;
   color: #1F505B;
 }
+#circulo-foto img {
+  overflow: hidden;
+  object-fit: cover; 
+  border-radius: 50%;
+}
+
