--- a/templates/static/css/milligram.log.css
+++ b/templates/static/css/milligram.log.css
@@ -89,3 +89,8 @@ form input::placeholder {
   color: #914e00;
   cursor: pointer;
 }
+.btn-registrar a{
+  background-color: #1F505B;
+  width: 100%;
+  height: 100%;
+}
