Commit atualizando alguma coisa que nao sei

--- a/autenticacao/templates/cadastro.html
+++ b/autenticacao/templates/cadastro.html
@@ -33,7 +33,7 @@
       <input type="password" placeholder="Confirmar senha" class="senhaAgain"/>
       <button type="submit" >Registrar</button>
     </form>
-          <p>colocar botao para voltar para o login</p>
+    <a href="javascript:history.back()" class="btn btn-primary">Voltar</a>
 
   </div>
 
