--- a/autenticacao/templates/recuperacao.html
+++ b/autenticacao/templates/recuperacao.html
@@ -1,32 +1,37 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <title>Recuperar Senha</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{% static 'css/milligram.recuper.css' %}" />
 </head>
+
 <body>
-  <div class="container">
+  <!-- PAGINA INICIAL -->
+  {%if carregar == 'email_insert' %}
+  <div class="container container-1">
     <h2>Recuperar Senha</h2>
     <p>Insira seu e-mail cadastrado para receber o link de redefinição</p>
-    
-    <form method="POST" action="">
-     
+
+    <form method="POST" action="{% url 'forget_password'%}?acao=insert_code" o>
+
       {% csrf_token %}
-       {% if messsages %}
-        {% for i in message %}
-         {{i}}
-        {% endfor %}
+      {% if messsages %}
+      {% for i in message %}
+      {{i}}
+      {% endfor %}
       {%endif%}
       <div class="message" style="text-align: center;">
         {% if messages %}
-          {% for message in messages%} 
-          <div class="alert {{ message.tags}}" role="alert">{{message}}</div>
-          {% endfor %}
+        {% for message in messages%}
+        <div class="alert {{ message.tags}}" role="alert">{{message}}</div>
+        {% endfor %}
         {% endif %}
       </div>
       <label for="email">E-mail</label>
@@ -36,7 +41,71 @@
         <button class="button-primary" type="submit">Enviar código</button>
       </div>
     </form>
+
+
+<!-- CODIGO OPCAO DE DIGITAR -->
+
+    {%elif carregar == 'code_insert' %}
+    
+    <div class="container container-2">
+      <h2>Recuperar Senha</h2>
+   testye   {{user.username}}
+      <p>Ola! {{user.username}}, insira o codigo enviado para seu email</p>      
+   <form action="{% url 'forget_password'%}?acao=new_password" method="POST" id="form-codigo" onsubmit="uneElemento()">
+        {% csrf_token %}
+        <div class="code-inputs">
+          <input type="text" maxlength="1" required class="inputCodigo" autofocus>
+          <input type="text" maxlength="1" required class="inputCodigo">
+          <input type="text" maxlength="1" required class="inputCodigo">
+          <input type="text" maxlength="1" required class="inputCodigo">
+          <input type="text" maxlength="1" required class="inputCodigo">
+          <input type="text" maxlength="1" required class="inputCodigo">
+          <input type="hidden" name="codigo" id="codigo" value="nada">
+        </div>
+        <button type="submit">Confirmar</button>
+      </form>
+    </div>
+    <script>
+      let inputs = document.querySelectorAll('.inputCodigo')
+      focoAtual = 0        // começa no 0 pq tamos num vetor
+      for(let i = 0; i < inputs.length; i++){
+         inputs[i].addEventListener('input', mudafoco)
+      }
+      function mudafoco(){
+       if (focoAtual < inputs.length){
+          inputs[focoAtual+1].focus()
+          focoAtual+=1
+        }
+       
+      }
+    </script>
+
+
+  <!-- REDEFINIR SENHA -->
+
+    {%else%}
+
+    <div class="container container-3">
+      <h2>Nova Senha</h2>
+      <p>Ola! {{user.username}}, defina uma nova senha</p>
+      <div class="alert-danger" id="message" role="alert"></div>
+      <br>
+      <form id="form-senha-nova" method="POST" action="{% url 'redefinir_senha'%}" onsubmit="validaLogin(event)">
+        {% csrf_token %}
+        <input class="senha" type="password" name="senha" placeholder="Nova senha" required autocomplete="new-password" autofocus>
+        <input class="senhaAgain" type="password" placeholder="Confirmar senha" required autocomplete="new-password">
+        <button type="submit">Redefinir</button>
+      </form>
+    </div>
+
+
+
   </div>
+  {%endif%}
+
+
+  <script src="{% static 'js/recuperacao.js' %}"></script>
 
 </body>
+
 </html>
