--- a/autenticacao/templates/cadastro.html
+++ b/autenticacao/templates/cadastro.html
@@ -17,7 +17,7 @@
       {% csrf_token %}
       <div class="foto-container">
       <div class="circulo-foto" id="circulo-foto"></div>
-      <p class="foto-texto"><input class="imagem" type="file" name="imagem"></p>
+      <p class="foto-texto"><input class="imagem" type="file" name="imagem" required></p>
     </div>
 
       <div class="message" style="text-align: center;">
