pelo amor de deus dá certo

--- a/app/templates/comuFazerPost.html
+++ b/app/templates/comuFazerPost.html
@@ -8,6 +8,15 @@
     <title></title>
 </head>
 <body>
-    
+
+    <!-- o html da pagina material aqui -->
+
+    <div class="popup post">
+        <h2>Fazer um Post</h2>
+        <input type="text" placeholder="Escreva um título" />
+        <textarea placeholder="Escreva a mensagem"></textarea>
+        <button class="upload-btn">Adicionar arquivo/imagem</button>
+        <button class="submit-btn">Postar</button>
+    </div>
 </body>
 </html>
