--- a/templates/static/css/milligram.cBase.css
+++ b/templates/static/css/milligram.cBase.css
@@ -98,3 +98,9 @@ a {
   margin-top: 10px;
   border-radius: 8px;
 }
+.comunidade-tabs a{
+  padding: 30px;
+}
+.selected{
+  background-color: rgb(147, 108, 186);
+}
