--- a/app/templates/perfil.html
+++ b/app/templates/perfil.html
@@ -35,11 +35,11 @@
         {% endif %}
         <input type="file" name="fotoDePerfil" />
         <div class="stars">
-          <i class="far fa-star estrela"></i>
-          <i class="far fa-star estrela"></i>
-          <i class="far fa-star estrela"></i>
-          <i class="far fa-star estrela"></i>
-          <i class="far fa-star estrela"></i>
+          <i class="fas fa-star estrela"></i>
+          <i class="fas fa-star estrela"></i>
+          <i class="fas fa-star estrela"></i>
+          <i class="fas fa-star estrela"></i>
+          <i class="fas fa-star estrela"></i>
         </div>
       </div>
     
