--- a/templates/static/css/milligram.material.css
+++ b/templates/static/css/milligram.material.css
@@ -86,3 +86,30 @@ body {
   box-shadow: 0 2px 5px rgba(0,0,0,0.2);
   cursor: pointer;
 }
+
+/* jose incluiu  isso aqui em baixo modifica ai  comajuda do gpt alguns apaga aqui  e faz denovo*/
+.btn-pdf {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #f39c12; /* laranja bonito */
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+    border-radius: 8px;
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+.btn-pdf:hover {
+    background-color: #e67e22; /* laranja escuro ao passar o mouse */
+    transform: scale(1.05);
+}
+
+.infosMaterial{
+ display: flex;
+}
+.infosMaterial img{
+  width: 25px;
+  height: 25px;
+    border-radius: 50%;  /* deixa circular */
+    object-fit: cover;
+}
