--- a/app/templates/comunidade.html
+++ b/app/templates/comunidade.html
@@ -23,7 +23,7 @@
     <div class="comunidade-info" href="">
       <h1>{{ comunidade.nome }}</h1>
       <p>{{ comunidade.descricao }}</p>
-      <form action="{% url 'modifica_joined' comunidade.id carregar 'modificar_seguidor' %}" method="GET">
+      <form action="{% url 'modifica_joined' comunidade.id carregar 'modificar_seguidor' %}" method="POST">
    
            {% csrf_token %}
              <button class="btn-junte-se 
@@ -38,6 +38,8 @@
         </form>
       <div class="comunidade-meta">
         <span>{{ comunidade.membros.count }} membros</span>
+        <br>
+      
         <span>{{ comunidade.posts.count }} postagens</span>
       </div>
     </div>
@@ -124,10 +126,12 @@
            <img src="{{material.usuario.foto.url}}" alt="fotoDequemFezOpost">
            <h3><a href="{% url 'view_profile' material.usuario.id %}">{{material.usuario}}</a></h3>
          </div>
+          <div class="titulo">{{material.titulo}}precisar mudar aqui</div>
+
           <div class="descricao">{{material.descricao}}</div>
-          <div class="etiquetas">{{material.ext}}</div>
+          <div class="etiquetas">{{material.ext}}EITQUETAS PRECISA MUDAR O CSS</div>
          
-          <a href="{{material.arquivo.url}}"  class="link-material btn-{{material.ext}}">
+          <a href="{{material.arquivo.url}}"    class="link-material btn-{{material.ext}}">
           📄 Vizualizar {{materia.ext}}
         </a> 
         <a href="{{material.arquivo.url}}"  download="" class="link-material btn-{{material.ext}}">
@@ -142,7 +146,7 @@
 
       <button class="add-btn"><i class="fas fa-plus"></i></button>
 
-    <form action="{% url 'enviar_comunidade' comunidade.id carregar %}" method="POST">
+    <form action="{% url 'enviar_comunidade' comunidade.id carregar %}" method="POST" enctype="multipart/form-data">
       
             {% csrf_token %}
 
@@ -153,6 +157,11 @@
 
         <textarea name="descricao" placeholder="Descrição do material"></textarea>
         <input name="material" type="file" placeholder="escolha um arquivo" />
+       
+       <div> <input type="checkbox" name="termos_e_condicoes" id="" required>
+         <label for="termos_e_condicoes">
+          Aceito os <a href="">termos de condições</a> permitindo que o material seje usado por terceiros
+        </label></div>
         <button class="submit-btn">Enviar</button>
       </div>
     </form>
@@ -187,52 +196,35 @@
 
 
     {% elif carregar == 'eventos' %}
-    <p>Eventos aqui</p>
     <div class="container">
-
-
+    
+      {% for e in dados %}
       <section class="eventos">
         <div class="evento-card">
-          <h3>Título da reunião</h3>
-          <div class="descricao">espaço para descrição da reunião</div>
-          <div class="link-meet">espaço para inserir o link do Google Meet</div>
+          <h3>{{e.tematica}}</h3>
+          {% if e != None %}
+          <div class="descricao">{{e.descricao}}</div>
+          {% endif %}
+          <div class="link-meet"><a href="{% if e.url|slice:':4' != 'http' %}https://{{ e.url }}{% else %}{{ e.url }}{% endif %}" target="_blank">{{e.url_da_reuniao}}</a></div>
           <div class="info">
-            <span class="data">00/00/00</span>
-            <span class="hora">12:34</span>
+            <span class="data">{{ e.data_hora|date:"d \d\e F \d\e Y" }}</span>
+            <span class="hora">Horario: {{ e.data_hora|time:"H:i" }}</span>
           </div>
         </div>
+        {% endfor %}
 
-        <div class="evento-card">
-          <h3>Título da reunião</h3>
-          <div class="descricao">espaço para descrição da reunião</div>
-          <div class="link-meet">espaço para inserir o link do Google Meet</div>
-          <div class="info">
-            <span class="data">00/00/00</span>
-            <span class="hora">12:34</span>
-          </div>
-        </div>
-
-        <div class="evento-card">
-          <h3>Título da reunião</h3>
-          <div class="descricao">espaço para descrição da reunião</div>
-          <div class="link-meet">espaço para inserir o link do Google Meet</div>
-          <div class="info">
-            <span class="data">00/00/00</span>
-            <span class="hora">12:34</span>
-          </div>
-        </div>
       </section>
 
       <button class="add-btn"><i class="fas fa-plus"></i></button>
 
       <div class="popup evento">
-        <h2>Criar Evento</h2>
-        <input type="text" placeholder="Título da reunião" />
-        <textarea placeholder="Descrição da reunião"></textarea>
-        <input type="text" placeholder="Link do Google Meet" />
+        <h2>Criar reunião</h2>
+        <input type="text" name="titulo" placeholder="Título da reunião" />
+        <textarea name="descricao" placeholder="Descrição da reunião"></textarea>
+        <input name="url_da_reuniao" type="text" placeholder="Link do Google Meet" />
         <div class="inline-fields">
-          <input type="date" />
-          <input type="time" />
+          <input name="data" type="date" />
+          <input name="hora" type="time" />
         </div>
         <button class="submit-btn">Criar</button>
       </div>
