--- a/app/templates/perfil.html
+++ b/app/templates/perfil.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+  <form  action="" class="form-section">
+    {% csrf_token %}
+
   <div class="container" >
     <header>
       <button class="back" >
@@ -19,21 +22,23 @@
     </a>
       </button>
       <h1>Editar perfil</h1>
-      <button class="save">Save</button>
+      <input type="submit" class="save" value="Salvar"> 
     </header>
 
     
 
-    <form class="form-section">
 
       <!-- Perfil + estrelas -->
       <div class="profile-section">
-        {% if user.foto %}
-          <img src="{{user.foto.url}}" alt="Perfil" class="profile-pic" />
-        {% else %}
-          <img src="{% static 'img/defaultFotoPerfil.jpg' %}" alt="Perfil" class="profile-pic" />
-        {% endif %}
-        <input type="file" name="fotoDePerfil" />
+        <label for="fotoDePerfil">
+          <img id="previewFoto" 
+               src="{% if user.foto %}{{ user.foto.url }}{% else %}{% static 'img/defaultFotoPerfil.jpg' %}{% endif %}" 
+               alt="Perfil" class="profile-pic" />
+      </label>
+        <div id="selecionarFoto">
+          <label for="fotoDePerfil">Selecionar foto</label>
+          <input type="file" name="fotoDePerfil"  id="fotoDePerfil" style="display: none;"/>
+        </div>
         <div class="stars">
           <i class="fas fa-star estrela"></i>
           <i class="fas fa-star estrela"></i>
@@ -54,15 +59,27 @@
     
         <!-- Outros campos -->
         {% for key,value in dados_usuario.items %}
-          {% if key != 'date_joined' and key != 'Biografia' %}
+          {% if key != 'date_joined' and key != 'Biografia' and key != 'Material' %}
           <div class="form-group">
             <label for="">{{key}}</label>
             <input type="text" value="{{value}}">
           </div>
+
+         
+         
           {% endif %}
         {% endfor %}
     
         <!-- Primeiro login -->
+        <div class="form-group">
+          <label>Materiais</label>
+          {% for i in  materiais %}
+            <label for="{{key}}">
+              <input type="checkbox" name="{{key}}" id="" value="{{i}}" {%if i  in  dados_usuario.Material %} checked {%endif %}>
+              {{i}}
+            </label>
+          {%endfor%}
+        </div>
         <div class="form-group">
           <label>Primeiro login</label>
           <input type="text" value='{{dados_usuario.date_joined|date:"d/m/y"}}' disabled />
@@ -90,7 +107,19 @@
     for(let i = 0; i < pontuacao; i++ ){
       estrelas[i].classList.add('pintada')
     }
+    
+});
+const inputFoto = document.getElementById('fotoDePerfil');
+const preview = document.getElementById('previewFoto');
 
+inputFoto.addEventListener('change', function() {
+    if (inputFoto.files && inputFoto.files[0]) {
+        const reader = new FileReader();
+        reader.onload = function(e) {
+            preview.src = e.target.result; // atualiza a imagem no frontend
+        }
+        reader.readAsDataURL(inputFoto.files[0]);
+    }
 });
 
   </script>
