--- a/app/templates/perfil.html
+++ b/app/templates/perfil.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load custom_tags %}
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -6,17 +7,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Editar Perfil</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
   <link rel="stylesheet" href="{% static 'css/milligram.pEdit.css' %}" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 
 <body>
-  <form  action="" class="form-section">
-    {% csrf_token %}
+  <form  action="{% url 'modify_profile' request.user.id %}" class="form-section" method="POST" enctype="multipart/form-data">
+  
+      {% csrf_token %}
 
   <div class="container" >
     <header>
-      <button class="back" >
+      <button type="button" class="back" >
         <a href="{% url 'indexComunidade' %}" class="back">
     <i class="fas fa-arrow-left"></i>
     </a>
@@ -36,8 +40,8 @@
                alt="Perfil" class="profile-pic" />
       </label>
         <div id="selecionarFoto">
-          <label for="fotoDePerfil">Selecionar foto</label>
-          <input type="file" name="fotoDePerfil"  id="fotoDePerfil" style="display: none;"/>
+          <label style="cursor: pointer;" for="fotoDePerfil">Selecionar foto</label>
+          <input type="file" name="foto"  id="fotoDePerfil" style="display: none;"/>
         </div>
         <div class="stars">
           <i class="fas fa-star estrela"></i>
@@ -49,6 +53,13 @@
       </div>
     
       <!-- Linha com inputs e biografia -->
+        <div class="message" style="text-align: center;">
+        {% if messages%}
+          {% for message in messages%} 
+          <div class="{{ message.tags}}" role="alert">{{message}}</div>
+          {% endfor %}
+        {% endif %}
+      </div>
       <div class="form-row">
         
         <!-- Biografia
@@ -56,13 +67,13 @@
           <label for="">Biografia:</label>
           <textarea name="biografia">{{dados_usuario.Biografia}}</textarea>
         </div> -->
-    
+
         <!-- Outros campos -->
         {% for key,value in dados_usuario.items %}
-          {% if key != 'date_joined' and key != 'Biografia' and key != 'Material' %}
+          {% if key != 'date_joined' and key != 'Biografia'  and key not in dados_com_select  and key not in  dados_com_checkbox%}
           <div class="form-group">
-            <label for="">{{key}}</label>
-            <input type="text" value="{{value}}">
+            <label for="{{key}}">{{key}}</label>
+            <input type="text" value="{{value}}" name="{{key}}" id="{{key}}">
           </div>
 
          
@@ -70,16 +81,45 @@
           {% endif %}
         {% endfor %}
     
-        <!-- Primeiro login -->
-        <div class="form-group">
-          <label>Materiais</label>
-          {% for i in  materiais %}
-            <label for="{{key}}">
-              <input type="checkbox" name="{{key}}" id="" value="{{i}}" {%if i  in  dados_usuario.Material %} checked {%endif %}>
-              {{i}}
-            </label>
+        <!--PARTE DOS SELECT AQUI -->
+ <div class="form-group">
+  {% for  key,value in dados_com_select.items %}
+          <label>{{key}}</label>
+         
+          <select name="{{key}}" id="">
+          
+          {% for j in  value %}
+          
+            <option value="{{j}}" {% if j|stringformat:"s" in dados_usuario|dict_get:key %}selected{%endif%}>{{j}}</option>
+            
           {%endfor%}
+          </select>
+        
         </div>
+      {%endfor%}
+
+    <!-- AQUI TERMINAR AS PERTES DOS SELECTS -->
+
+  <!-- aqui começa a parte dos checkbox -->
+   
+        
+       {% for key,value in  dados_com_checkbox.items %}
+        <div class="form-group">
+          <label>{{key}}</label>
+          <div class="dive checkbox" id="{{key}}">
+          {% for i in  value %}
+        
+          
+               <input  type="checkbox" id="{{i}}" name="{{key}}" value="{{i}}" {%if i|stringformat:"s"  in  dados_usuario|dict_get:key %} checked {%endif %}>
+            <label for="{{i}}">{{i}}</label>
+       
+          
+          
+
+          {%endfor%}
+          </div>
+        </div>
+      {%endfor%}
         <div class="form-group">
           <label>Primeiro login</label>
           <input type="text" value='{{dados_usuario.date_joined|date:"d/m/y"}}' disabled />
@@ -87,41 +127,47 @@
 
          <!-- Biografia -->
          <div class="form-group-bio">
-          <label for="">Biografia:</label>
-          <textarea name="biografia">{{dados_usuario.Biografia}}</textarea>
+          <label for="biografia">Biografia:</label>
+          <textarea name="biografia" id="biografia">{{dados_usuario.Biografia}}</textarea>
         </div>
     
       </div>
     
     </form>
     
+    <h1>REDEFNINIR SENHA</h1>
+    
   </div>
 
+  <script src="{% static 'js/perfil.js'%}">
+    
+  </script>
   <script>
-   
     window.addEventListener('load', function() {
-    // Passando o valor do servidor
+        // Passando o valor do servidor
     let estrelas =  document.querySelectorAll('.estrela')
     let pontuacao = '{{user.pontuacao}}'
     pontuacao = parseInt(pontuacao)
     for(let i = 0; i < pontuacao; i++ ){
       estrelas[i].classList.add('pintada')
     }
+      // Seleciona todos os inputs e textareas dentro do formulário
+    let elementos = [
+        ...document.querySelectorAll('.form-section input'),
+        ...document.querySelectorAll('.form-section textarea')
+    ];
+
+    elementos.forEach(el => {
+        // Substitui espaços por underscore no name e id
+        let novoNome = el.name.replace(/\s+/g, '_');
+        el.name = novoNome.toLowerCase();
+
+        if (el.id) {
+            el.id = el.id.replace(/\s+/g, '_');
+        }
+    });
     
 });
-const inputFoto = document.getElementById('fotoDePerfil');
-const preview = document.getElementById('previewFoto');
-
-inputFoto.addEventListener('change', function() {
-    if (inputFoto.files && inputFoto.files[0]) {
-        const reader = new FileReader();
-        reader.onload = function(e) {
-            preview.src = e.target.result; // atualiza a imagem no frontend
-        }
-        reader.readAsDataURL(inputFoto.files[0]);
-    }
-});
-
   </script>
 </body>
 
