--- a/autenticacao/templates/questionario.html
+++ b/autenticacao/templates/questionario.html
@@ -25,7 +25,7 @@
             <div class="perguntaContainer">
                 <h2 id="pergunta">{{pergunta.texto_pergunta}}</h2>
                 <input name="{{pergunta.titulo_pergunta}}" type="{{pergunta.tipo_input}}"
-                    id="{{pergunta.titulo_pergunta}}" placeholder="{{pergunta.placeholder}}" value=" " required>
+                    id="{{pergunta.titulo_pergunta}}" placeholder="{%if pergunta.placeholder%}{{pergunta.placeholder}}{%endif%}" required>
                 <br>
             </div>
             {% elif pergunta.tipo_input|lower|cut:" " == 'select' %}
@@ -33,7 +33,7 @@
             <div class="perguntaContainer" style="display: none;">
                 <label for="{{pergunta.titulo_pergunta}}">{{pergunta.texto_pergunta}}</label>
                 <select name="{{pergunta.titulo_pergunta}}" id="{{pergunta.titulo_pergunta}}" required>
-                    <option value="" disabled selected></option>
+                    <option  disabled selected></option>
                     {% for op in opcoes %}
 
                     {%if op.pergunta.titulo_pergunta == pergunta.titulo_pergunta %}
@@ -49,7 +49,7 @@
                 <label for="{{pergunta.titulo_pergunta}}">{{pergunta.texto_pergunta}}</label>
                 <br>
 
-                <textarea required name="{{pergunta.titulo_pergunta}}" id="{{pergunta.titulo_pergunta}}"></textarea>
+                <textarea required name="{{pergunta.titulo_pergunta}}" id="{{pergunta.titulo_pergunta}}" ></textarea>
 
             </div>
             {% elif pergunta.tipo_input|lower|cut:" " == 'checkbox' %}
